[Upd] Show archives on a separate tab + re-order tabs

--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -37,6 +37,18 @@ Projets à UrLab
         </a>
     </li>
     <li class="nav-item">
+        <a href="#tab-proposition" class="nav-link" data-toggle="tab" role="tab">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-easel" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M8.473.337a.5.5 0 0 0-.946 0L6.954 2h2.092L8.473.337zM12.15 11h-1.058l1.435 4.163a.5.5 0 0 0 .946-.326L12.15 11zM8.5 11h-1v2.5a.5.5 0 0 0 1 0V11zm-3.592 0H3.85l-1.323 3.837a.5.5 0 1 0 .946.326L4.908 11z" />
+                <path fill-rule="evenodd"
+                    d="M14 3H2v7h12V3zM2 2a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H2z" />
+            </svg>
+            <span class="hidden-xs">Proposition</span>
+        </a>
+    </li>
+    <li class="nav-item">
         <a href="#tab-finished" class="nav-link" data-toggle="tab" role="tab">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-award" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
@@ -48,15 +60,11 @@ Projets à UrLab
         </a>
     </li>
     <li class="nav-item">
-        <a href="#tab-proposition" class="nav-link" data-toggle="tab" role="tab">
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-easel" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M8.473.337a.5.5 0 0 0-.946 0L6.954 2h2.092L8.473.337zM12.15 11h-1.058l1.435 4.163a.5.5 0 0 0 .946-.326L12.15 11zM8.5 11h-1v2.5a.5.5 0 0 0 1 0V11zm-3.592 0H3.85l-1.323 3.837a.5.5 0 1 0 .946.326L4.908 11z" />
-                <path fill-rule="evenodd"
-                    d="M14 3H2v7h12V3zM2 2a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H2z" />
+        <a href="#tab-archived" class="nav-link" data-toggle="tab" role="tab">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-award" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16">
+                <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
             </svg>
-            <span class="hidden-xs">Proposition</span>
+            <span class="hidden-xs">Archivés</span>
         </a>
     </li>
 </ul>
@@ -96,7 +104,7 @@ Projets à UrLab
                             </svg>
                             projets finis
                         </a>
-                        et les
+                        , les
                         <a href="#tab-proposition" data-toggle="tab">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-suit-club-fill"
                                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -107,23 +115,19 @@ Projets à UrLab
                                     d="M5.602 14.153c.5-.758 1.224-1.98 1.83-3.498.187-.467.949-.467 1.136 0a19.816 19.816 0 0 0 1.83 3.498c.231.35-.02.847-.438.847H6.04c-.419 0-.67-.497-.438-.847z" />
                                 <path d="M7 7h2v4H7V7z" />
                             </svg>
-                            propositions de projet!
+                            propositions de projet
+                        </a>
+                        ainsi que les
+                        <a href="#tab-archived" data-toggle="tab">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16">
+                                <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+                            </svg>
+                            archives !
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="tab-pane" id="tab-finished">
-                <br>
-                <p>Ici, vous trouverez les projets qui ont déjà été faits au hackerspace.</p>
-                {% for row in done %}
-                <div class="row">
-                    {% for project in row %}
-                    {% include "project_card.html" %}
-                    {% endfor %}
-                </div>
-                <div class="clearfix"></div>
-                {% endfor %}
-            </div>
+
             <div class="tab-pane" id="tab-proposition">
                 <br>
                 <p>Parfois les gens n'ont pas le temps, pas les compétences pour faire un projet
@@ -138,7 +142,33 @@ Projets à UrLab
                 </div>
                 <div class="clearfix"></div>
                 {% endfor %}
+            </div>
 
+            <div class="tab-pane" id="tab-finished">
+                <br>
+                <p>Ici, vous trouverez les projets qui ont déjà été faits au hackerspace.</p>
+                {% for row in done %}
+                <div class="row">
+                    {% for project in row %}
+                    {% include "project_card.html" %}
+                    {% endfor %}
+                </div>
+                <div class="clearfix"></div>
+                {% endfor %}
+            </div>
+
+            <div class="tab-pane" id="tab-archived">
+                <br>
+                <p>Parfois les projets ne sont juste pas réalisables, parfois ils ont du rester dans l'ancien local...
+                    Mais du coup on les garde ici pour la postérité 🙂 Qui sait, peut-être un jour seront-ils ressucités ! #jésus</p>
+                {% for row in archived %}
+                <div class="row">
+                    {% for project in row %}
+                    {% include "project_card.html" %}
+                    {% endfor %}
+                </div>
+                <div class="clearfix"></div>
+                {% endfor %}
             </div>
         </div>
     </div>
