--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -30,8 +30,13 @@
         </div>
         {% elif project.status == 'a' %}
         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-          aria-valuemax="100" style="min-width: 2em; width:100%">
-          {{project.ANT_CHAR}} Les fourmis sont parties
+        aria-valuemax="100" style="min-width: 2em; width:100%">
+        {{project.ANT_CHAR}} Les fourmis sont parties
+        </div>
+        {% elif project.status == 'd' %}
+        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+            aria-valuemax="100" style="min-width: 2em; width:100%">
+            🏢 Coincé au 131
         </div>
         {% else %}
         <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0"
