--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -107,6 +107,13 @@
                 {{project.ANT_CHAR}} Les fourmis sont parties
             </div>
         </div>
+        {% elif project.status == 'd' %}
+        <div class="progress">
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                aria-valuemax="100" style="min-width: 2em; width:100%">
+                😭 Le projet est resté au 131
+            </div>
+        </div>
         {% else %}
         <div class="progress">
             <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0"
