--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -21,13 +21,24 @@ Evénements de UrLab
   </ol>
 </nav>
 
+<form action="{% url 'events_home' %}" method="get" class="form">
+  <div class="input-group" style="justify-content: right">
+      <div class="form-outline">
+          <input type="search" id="form1" class="form-control" name="search_term" value="{{search_term}}"/>
+      </div>
+      <button type="submit" class="btn btn-primary">
+          <i class="fas fa-search"></i>
+      </button>
+  </div>
+</form>
+
 <ul class="nav nav-tabs justify-content-end" id="article-menu" role="tablist">
   <li class="nav-item mr-auto">
     <p><strong>Nos Events</strong></p>
   </li>
 
   <li class="nav-item" >
-    <a href="/events?type=future&offset=0" class="nav-link {% if type == "future" %} active {% endif %}" role="tab">
+    <a href="/events?type=future&offset=0{%if search_term%}&search_term={{search_term}}{% endif %}" class="nav-link {% if type == "future" %} active {% endif %}" role="tab">
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bullseye" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
   <path fill-rule="evenodd" d="M8 13A5 5 0 1 0 8 3a5 5 0 0 0 0 10zm0 1A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
@@ -39,7 +50,7 @@ Evénements de UrLab
   </li>
 
   <li class="nav-item" >
-    <a href="/events?type=incubation&offset=0" class="nav-link {% if type == "incubation" %} active {% endif %}" role="tab">
+    <a href="/events?type=incubation&offset=0{%if search_term%}&search_term={{search_term}}{% endif %}" class="nav-link {% if type == "incubation" %} active {% endif %}" role="tab">
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-easel" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path d="M8.473.337a.5.5 0 0 0-.946 0L6.954 2h2.092L8.473.337zM12.15 11h-1.058l1.435 4.163a.5.5 0 0 0 .946-.326L12.15 11zM8.5 11h-1v2.5a.5.5 0 0 0 1 0V11zm-3.592 0H3.85l-1.323 3.837a.5.5 0 1 0 .946.326L4.908 11z"/>
   <path fill-rule="evenodd" d="M14 3H2v7h12V3zM2 2a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H2z"/>
@@ -49,7 +60,7 @@ Evénements de UrLab
   </li>
 
   <li class="nav-item" >
-    <a href="/events?type=past&offset=0" class="nav-link {% if type == "past" %} active {% endif %}" role="tab">
+    <a href="/events?type=past&offset=0{%if search_term%}&search_term={{search_term}}{% endif %}" class="nav-link {% if type == "past" %} active {% endif %}" role="tab">
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-suit-club-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path d="M11.5 4.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0z"/>
   <path d="M8 9a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0zm7 0a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0z"/>
