--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,15 @@ h1 small{
     font-size: 0.7em;color: gray;
 }
 
+blockquote {
+    padding-left: 10px;
+    margin-left: 20px;
+    border-left: solid;
+    border-width: 2px;
+    border-color: lightgrey;
+    color: grey;
+}
+
 .user-avatar {
   width: 1.5em;
   height: 1.5em;
