--- a/space/templates/map.html
+++ b/space/templates/map.html
@@ -12,7 +12,7 @@
     {% if space_open %}
     <div class="alert alert-success">Le hackerspace est actuellement ouvert ! Venez nous dire bonjour !</div>
     {% else %}
-    <div class="alert alert-warning">La hackerspace est fermé pour l'instant :(</div>
+    <div class="alert alert-warning">Le hackerspace est fermé pour l'instant :(</div>
     {% endif %}
 
     <div class="text-right">
