--- a/projects/templates/project_comments_list.html
+++ b/projects/templates/project_comments_list.html
@@ -1,4 +1,5 @@
 {% load humanize %}
+{% load formatting %}
 {% load bootstrap4 %}
 
 <style type="text/css">
@@ -49,7 +50,7 @@
                 </a>
             </div>
             <div class="col">
-                <p class="card-text">{{comment.content}}</p>
+                <p class="card-text">{{comment.content|markdown}}</p>
             </div>
         </div>
     </div>
