Changed old logl png to new svg

--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -9,7 +9,7 @@ Evénements de UrLab
     <meta property="og:description" content="La liste des événements du hackerspace" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://urlab.be{% url "events_home" %}" />
-    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.svg" />
 {% endblock %}
 
 {% block content %}
