--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -30,7 +30,7 @@
         <meta property="og:title" content="UrLab" />
         <meta property="og:type" content="place" />
         <meta property="og:url" content="https://urlab.be" />
-        <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+        <meta property="og:image" content="https://urlab.be/static/img/space-invaders.svg" />
     {% endblock %}
 </head>
 
@@ -44,7 +44,7 @@
         {% if space_open %}
         <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders-open.png" /></a></div>
         {% else %}
-        <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders.png" /></a></div>
+        <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders.svg" /></a></div>
         {% endif %}
     </header>
 
