--- a/space/templates/motd.html
+++ b/space/templates/motd.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="En direct de notre channel IRC !" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://urlab.be{% url "motd" 1 %}" />
-    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.svg" />
 {% endblock %}
 
 {% block content %}
