--- a/wiki/templates/article_detail.html
+++ b/wiki/templates/article_detail.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="{{ article.title }}" />
     <meta property="og:url" content="https://urlab.be{% url "view_article" article.pk %}" />
     <meta property="og:description" content="{{ article.content }}" />
-    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.svg" />
     <meta property="article:section" content="Badge" />
 {% endblock %}
 
