--- a/wiki/templates/wiki_home.html
+++ b/wiki/templates/wiki_home.html
@@ -9,7 +9,7 @@ Wiki UrLab
     <meta property="og:description" content="Le wiki du hackerspace, toute l'aide dont tu as besoin est ici :)" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://urlab.be{% url "wiki_home" %}" />
-    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.svg" />
 {% endblock %}
 
 {% block content %}
