--- a/badges/templates/badges_home.html
+++ b/badges/templates/badges_home.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="La liste des badges du hackerspace" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://urlab.be{% url "badges_home_view" %}" />
-    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.svg" />
 {% endblock %}
 
 {% block content %}
