--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -9,7 +9,7 @@ Projets à UrLab
     <meta property="og:description" content="La liste des projets du hackerspace" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://urlab.be{% url "projects_home" %}" />
-    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.svg" />
 {% endblock %}
 
 {% block content %}
